@startuml
skinparam classAttributeIconSize 0
hide circle

!theme plain
top to bottom direction
skinparam linetype ortho

abstract class Subject {
    +attach()
    +detach()
    +notifyObservers()
}

abstract class Observer {
    + abstract update()
}

class Chrono {
  + Chrono(int)
  + stop(): void
  + start(): void
  + reset(): void
  + toggle(): void
  - updateTime(): void
   -time: int
   -id: int
   -isRunning: boolean
}

abstract class BaseDial {
  + BaseDial(Chrono):
  + update(): void
  + getChrono(): Chrono
  # getSeconds(): int
  # getMinutes(): int
  # getHours(): int
   -time: int
}

abstract class Dial {
  + Dial(Chrono)
  + update(): void
  + getPanel(): JPanel
  # abstract createPanel(): JPanel
  - addMouseListener(): void
  # panel: JPanel
  # label: JLabel
}

abstract class AnalogDial {
  + AnalogDial(Chrono)
  # createPanel(): JPanel
  # getMinutesWidth(): int
  # getImage(): Image
  # getSecondsColor(): Color
  # getSecondsLength(): int
  # getMinutesColor(): Color
  # getMinutesLength(): int
  # getHoursLength(): int
  # getHoursWidth(): int
  # getSecondsWidth(): int
  # getHoursColor(): Color
  - drawSecondsHand(Graphics2D): void
  - drawHoursHand(Graphics2D): void
  - drawHand(Graphics2D, double, int, int, Color): void
  - drawMinutesHand(Graphics2D): void
  - image: Image
}

class ArabDial {
  + ArabDial(Chrono)
   #getImage(): Image
   #getSecondsColor(): Color
   #getMinutesColor(): Color
   + BUTTON_NAME: String
}

class RomanDial {
   + RomanDial(Chrono):
   #getImage(): Image
   #getSecondsColor(): Color
   #getMinutesColor(): Color
   + BUTTON_NAME: String
}

class DigitalDial {
  + DigitalDial(Chrono):
  + update(): void
  # createPanel(): JPanel
   +BUTTON_NAME: String
   -chronoId: int
}

class DialManager {
  + DialManager(int)
  - doAction(String): void
}

class Window {
  + Window(Dial)
  + Window(Dial[])
}

class JFrame {

}

Dial        -UP-^   BaseDial
Chrono      -UP-^   Subject
BaseDial    -UP-^   Observer
AnalogDial  -UP-^   Dial
ArabDial    -UP-^   AnalogDial
DigitalDial -UP-^   Dial
RomanDial   -UP-^   AnalogDial
Window      -UP-^   JFrame


Subject     "1"--right-->"*"   Observer: has
BaseDial    "*"--left->"1"    Chrono: has

Chrono      "1..9 "<--"1 "        DialManager: creates
DialManager "1   "-->"*"           Window: " creates"
DialManager "1   "-->"*"           Dial: " creates"
Window      "1 "-->"1..*"     Dial: contains
@enduml
